Fixed Data Visualization Mobile Breakpoint
Ang hirap ipanganak bilang isa parpukkkk

--- a/style.css
+++ b/style.css
@@ -118,6 +118,16 @@ header {
     margin-left: 10px;
   }
 
+  #monthFilter-dashboard{
+    width: 120px;
+    padding: 5px;
+    border: none;
+    border-radius: 8px;
+    background-color: #EBEBEB;
+    color: black;
+    margin-left: 10px;
+  }
+
   #monthFilter option:active{
     border: 2px solid black;
    }
@@ -136,7 +146,19 @@ header {
     color: black;
   }
 
+  #yearFilter-dashboard{
+    margin-left: 10px;
+    width: 120px;
+    padding: 5px;
+    border: none;
+    border-radius: 8px;
+    background-color: #EBEBEB;
+    color: black;
+  }
+
   /* Dashboard */
+
+  
   .container_dashboard {
     display: block;
     padding: 40px;
@@ -145,7 +167,7 @@ header {
     width: 90%;
     justify-content: center;
     align-items: center;
-    height: 100%; 
+    height: 100%;
   }
 
   /* PROFILE DROPDOWN */
@@ -639,6 +661,19 @@ label {
 @media only screen and (max-width: 768px) {
   .card-container-admin{
      margin-top: 75px;
+  }
+
+  #leaveChart{
+    margin-left: 50px;
+  }
+
+  .container_dashboard {
+    width: 75%;
+    margin-left: -15px;
+  }
+
+  #monthFilter-dashboard{
+    margin-left: 20px
   }
 }
 
